Fix td cell roles, table css on safari

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -27,11 +27,13 @@
 .App {
   text-align: center;
   color: rgb(0, 0, 0);
-  body {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.nav-header{
+  width: 100%;
 }
 
 .modal{
