--- a/src/components/game/grid/Grid.css
+++ b/src/components/game/grid/Grid.css
@@ -12,7 +12,8 @@
 }
 
 .grid-container{
-    display: block;
+    display: flex;
+    flex-direction: column;
 }
 
 @media only screen and (max-width: 410px) {
@@ -258,6 +259,9 @@
     align-items: center;
     font-size: inherit;
     box-sizing: border-box;
+}
+
+.inner-corner, .inner-square{
     background-color: var(--empty-tile-color);
 }
 
