--- a/src/components/modals/WinModal.css
+++ b/src/components/modals/WinModal.css
@@ -10,23 +10,21 @@
     flex-direction: column;
 }
 
-.statistics{
-    table {
-        width: 100%;
-        border-collapse: collapse;
-        border: 2px solid black;
-    }
-    
-    th {
-        text-align: left;
-    }
-    
-    td {
-        text-align: right;
-    }
-    
-    th,td {
-        padding: 5px;
-        border: 1px solid black;
-    }
+.statistics td, th {
+    padding: 5px;
+    border: 1px solid black;
+}
+
+.statistics th {
+    text-align: left;
+}
+
+.statistics td {
+    text-align: right;
+}
+
+.statistics table {
+    width: 100%;
+    border-collapse: collapse;
+    border: 2px solid black;
 }
